--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
               </div>
               <div class="intro--options">
                 <a href="#0">
-                  <h3>Metiew &amp; Smith</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>sreerag&amp; minnaj</h3>
+                  <p>popoda naari sreerag, consectetur adipisicing elit sed do.</p>
                 </a>
                 <a href="#0">
                   <h3>Fantasy interactive</h3>
