--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>sree</title>
+  <title>global</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -62,7 +62,7 @@
               <div class="intro--options">
                 <a href="#0">
                   <h3>sreerag&amp; minnaj</h3>
-                  <p>popoda naari sreerag, consectetur adipisicing elit sed do.</p>
+                  <p>hi devops class, consectetur adipisicing elit sed do.</p>
                 </a>
                 <a href="#0">
                   <h3>Fantasy interactive</h3>
